fixing spacing on img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ transition: transform .2s;
 display: block; 
 margin-left: auto; 
 margin-right: auto;
-padding: 10px; 
+padding: 10px 5px 20px; 
 }
 
 /*wanted the images under Work to slightly enlarge when you hover your cursor over them */
